changed heading text color back to black due to contrast issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ body {
 
 .heading {
     font-size: var(--large-txt);
-    color: var(--yellow);
+    color: var(--black);
 }
 
 .button {
